FIX: Fixing buttons
* fixed "Actions" buttons for better texts

--- a/src/index.html
+++ b/src/index.html
@@ -118,13 +118,13 @@
                     </div>
                     <br>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_actions.png" draggable="false" height="20px" width="20px"> Actions:</h2>
-                    <button id="resetBtn" class="btn" title="Reset datas"><img src="assets/_delete.png" draggable="false" width="25px" height="25px">  Delete all data</button>
+                    <button id="resetBtn" class="btn" title="Delete data"><img src="assets/_delete.png" draggable="false" width="25px" height="25px">  Delete all data</button>
                     <br> <br>
                     <button id="restartBtn" class="btn" title="Restart"><img src="assets/_reload.png" draggable="false" width="23px" height="23px">  Restart</button>
                     <br> <br>
-                    <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton" title="Quit"><img src="assets/_quit.png" draggable="false" height="25px" width="25px"> Quit</button>
+                    <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton" title="Quit application"><img src="assets/_quit.png" draggable="false" height="25px" width="25px"> Quit Application</button>
                     <br> <br>
-                    <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton" title="Close"><img src="assets/_close.png" draggable="false" height="15px" width="15px"> Close</button>
+                    <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton" title="Close panel"><img src="assets/_close.png" draggable="false" height="15px" width="15px"> Close Panel</button>
                 </div>
             </div>
         </div>
