FIX: Fixing characterLimit logic
* fixing bugs with this new feauture

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
                     <label for="checkbox" style="font-size: 20px;">Disables the auto-close of the settings panel.</label><br><br>
                     <input type="checkbox" id="characterLimit" style="transform: scale(1.7);">
-                    <label for="characterLimit" style="font-size: 20px;">Disable the character limit for Tasks.</label><br><br>
+                    <label for="characterLimit" style="font-size: 20px;">Enable character limit.</label><br><br>
                     <input type="checkbox" id="joinBeta" style="transform: scale(1.7);">
                     <label for="joinBeta" style="font-size: 20px;">Join Beta Program for AI Assistant.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel()" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will show the button for AI in Beta version"><br><br>
                     <br> <br> <br>
