--- a/src/popUp.html
+++ b/src/popUp.html
@@ -19,17 +19,17 @@
             <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Excon', sans-serif;" id="startingText">Edit the properties of the currently selected task.</h4>
             <div class="modify-task-row">
                 <label for="inputName" style="color: white; font-family: 'Excon', sans-serif;">Task Name: </label>
-                <input type="text" id="inputName" placeholder="Task Name..." title="Enter the new Task Name">
+                <input type="text" id="inputName" placeholder="Task Name..." title="Enter the new Task Name" maxlength="20">
             </div>
             <br>
             <div class="modify-task-row">
                 <label for="inputPV" style="color: white; font-family: 'Excon', sans-serif;">Previous Version: </label>
-                <input type="text" id="inputPV" placeholder="Previous Version..." title="Optional">
+                <input type="text" id="inputPV" placeholder="Previous Version..." title="Optional" maxlength="10">
             </div>
             <br>
             <div class="modify-task-row">
                 <label for="inputNV" style="color: white; font-family: 'Excon', sans-serif;">Newer Version: </label>
-                <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional">
+                <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional" maxlength="10">
             </div>
             <br>
             <div class="modify-task-row" style="justify-content: end;" id="buttons">
