--- a/src/index.html
+++ b/src/index.html
@@ -113,8 +113,12 @@
                     </div>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_help.png" draggable="false" height="20px" width="20px"> Need help?</h2>
                     <div class="needHelp">
-                        <button id="feedback" title="Leave a Feedback"><img src="assets/_feedback.png" width="20px" height="20px" draggable="false"> Leave a Feedback</button>
+                        <button id="feedback" title="Leave a Feedback"><img src="assets/_feedback.png" width="20px" height="20px" draggable="false"> Leave a Feedback <img src="assets/_arrowDown.png" alt="Icon arrow" style="display: inline;" width="20px" height="20px"></button>
                         <button id="contactUs" title="Contact Us"><img src="assets/_contact.png" width="20px" height="20px" draggable="false"> Contact Us</button>
+                    </div>
+                    <div class="feedbackSelection" id="feedbackSelection">
+                        <a id="bug" style="color: white; margin-left: 170px;">Write a Bug Report.</a><br>
+                        <a id="feedbackBtn" style="color: white; margin-left: 170px;">Leave a Feedback.</a>
                     </div>
                     <br>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_actions.png" draggable="false" height="20px" width="20px"> Actions:</h2>
