RESTYLE: Restyling a command
* now the /modify command is /edit for better readability

--- a/src/popUp.html
+++ b/src/popUp.html
@@ -33,7 +33,7 @@
             </div>
             <br>
             <div class="modify-task-row" style="justify-content: end;" id="buttons">
-                <button onclick="submitInput()" style="background-color: #009dff;" class="editBtn" title="Modify"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
+                <button onclick="submitInput()" style="background-color: #009dff;" class="editBtn" title="Edit"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
                 <button onclick="DeleteTask()" style="background-color: red;" class="deleteBtn" title="Delete"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
                 <button onclick="Quit()" style="background-color: red;" class="closeBtn" title="Close"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px; margin-left: 1px;" draggable="false"></button>
             </div>
