--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">MAINTENANCE TASKS</h1>
                 <div class="input-group">
-                    <input type="text" id="softwareInput" placeholder="Enter Task name..." required spellcheck="false" title="Task Name" maxlength="20">
+                    <input type="text" id="softwareInput" placeholder="Enter Task name..." required spellcheck="false" title="Task name" maxlength="20">
                     <div class="version-inputs" id="software">
-                        <input type="text" id="softwarePrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version" maxlength="10">
-                        <input type="text" id="softwareNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version" maxlength="10">
+                        <input type="text" id="softwarePrevVersion" placeholder="Previous version" spellcheck="false" title="Previous version" maxlength="10">
+                        <input type="text" id="softwareNextVersion" placeholder="Newer version" spellcheck="false" title="Newer version" maxlength="10">
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
-                        <input type="text" id="userTypeIn" placeholder="Employee Name..." spellcheck="false" title="Employee Name (Optional)">
+                        <input type="text" id="userTypeIn" placeholder="Employee name..." spellcheck="false" title="Employee name (Optional)">
                     </div>
                     <button id="softwareAddBtn" title="Add to Tasks"><img src="assets/_add.png" width="20px" height="20px" draggable="false"> Add to Tasks</button>
                 </div>
@@ -30,14 +30,14 @@
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">OUT OF MAINTENANCE</h1>
                 <div class="input-group">
-                    <input type="text" id="fuoriInput" placeholder="Enter Task name... " required spellcheck="false" title="Task Name" maxlength="20">
+                    <input type="text" id="fuoriInput" placeholder="Enter Task name... " required spellcheck="false" title="Task name" maxlength="20">
                     <div class="version-inputs" id="out">
-                        <input type="text" id="fuoriPrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous Version" maxlength="10">
-                        <input type="text" id="fuoriNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer Version" maxlength="10">
+                        <input type="text" id="fuoriPrevVersion" placeholder="Previous Version" spellcheck="false" title="Previous version" maxlength="10">
+                        <input type="text" id="fuoriNextVersion" placeholder="Newer Version" spellcheck="false" title="Newer version" maxlength="10">
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
-                        <input type="text" id="userTypeOut" placeholder="Employee Name..." spellcheck="false" title="Employee Name (Optional)">
+                        <input type="text" id="userTypeOut" placeholder="Employee bame..." spellcheck="false" title="Employee name (Optional)">
                     </div>
                     <button id="fuoriAddBtn" title="Add to Tasks"><img src="assets/_add.png" width="20px" height="20px" draggable="false"> Add to Tasks</button>
                 </div>
@@ -127,9 +127,9 @@
                     <br> <br>
                     <button id="restartBtn" class="btn" title="Restart"><img src="assets/_reload.png" draggable="false" width="23px" height="23px">  Restart</button>
                     <br> <br>
-                    <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton" title="Quit application"><img src="assets/_quit.png" draggable="false" height="25px" width="25px"> Quit Application</button>
+                    <button style="background-color: #c01212; font-size: 20px;" onclick="quitApplication()" class="quitButton" title="Quit application"><img src="assets/_quit.png" draggable="false" height="25px" width="25px"> Quit application</button>
                     <br> <br>
-                    <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton" title="Close panel"><img src="assets/_close.png" draggable="false" height="15px" width="15px"> Close Panel</button>
+                    <button style="background-color: #c01212; font-size: 20px;" onclick="closeInfoBox()" class="closeButton" title="Close panel"><img src="assets/_close.png" draggable="false" height="15px" width="15px"> Close panel</button>
                 </div>
             </div>
         </div>
