--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                     <h4 style="color: white; display: flex; justify-content: end; margin-right: 170px; margin-top: -0px; font-weight: 300; font-style: italic;">Apache License</h4>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_help.png" draggable="false" height="20px" width="20px"> Need help?</h2>
                     <div class="needHelp">
-                        <button id="feedback" title="Leave a Feedback"><img src="assets/_feedback.png" width="20px" height="20px" draggable="false"> Leave a Feedback <img src="assets/_arrowDown.png" alt="Icon arrow" style="display: inline;" width="20px" height="20px"></button>
+                        <button id="feedback" title="Leave a Feedback"><img src="assets/_feedback.png" width="20px" height="20px" draggable="false"> Leave a Feedback <img src="assets/_arrowDown.png" alt="Icon arrow" style="display: inline;" width="20px" height="20px" id="menuFeedback"></button>
                         <button id="contactUs" title="Contact Us"><img src="assets/_contact.png" width="20px" height="20px" draggable="false"> Contact Us</button>
                     </div>
                     <div class="feedbackSelection" id="feedbackSelection">
