FIX: Fixed mismatch
* fixed a grammatical error in Employee input

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="nameTaskUser">
                         <img src="assets/_employee.png" draggable="false" class="nameTaskUserImg">
-                        <input type="text" id="userTypeOut" placeholder="Employee bame..." spellcheck="false" title="Employee name (Optional)">
+                        <input type="text" id="userTypeOut" placeholder="Employee name..." spellcheck="false" title="Employee name (Optional)">
                     </div>
                     <button id="fuoriAddBtn" title="Add to Tasks"><img src="assets/_add.png" width="20px" height="20px" draggable="false"> Add to Tasks</button>
                 </div>
