feat: restyling of Charts Settings
* UI Refinements with "Charts Settings" option

--- a/src/index.html
+++ b/src/index.html
@@ -63,25 +63,25 @@
                 <h1 style="font-family: 'Excon', sans-serif; font-size: 35px; text-align: center;"><img src="assets/_settings.png" alt="Charts settings" width="30px" height="30px" draggable="false"> Charts Settings:</h1>
                 <center>
                     <div class="selections">
-                        <label for="colorTaskCreated" style="margin-left: 20px;">Color curve <i>Tasks created:</i> </label>
-                        <select name="selectColor" id="colorTaskCreated" style="width: 25%;">
-                            <option value="red">Red</option>
-                            <option value="green">Green</option>
-                            <option value="blue">Blue</option>
-                            <option value="orange">Orange</option>
-                            <option value="yellow">Yellow</option>
-                        </select> <br> <br>
-                        <label for="colorTaskCompleted" style="margin-left: 20px;">Color curve <i>Tasks completed:</i> </label>
-                        <select name="selectColor" id="colorTaskCompleted" style="width: 25%;">
-                            <option value="green">Green</option>
-                            <option value="red">Red</option>
-                            <option value="blue">Blue</option>
-                            <option value="orange">Orange</option>
-                            <option value="yellow">Yellow</option>
+                        <label for="colorTaskCreated" style="margin-left: 20px;">Color <b>Tasks created:</b></label>
+                        <select name="selectColor" id="colorTaskCreated" style="width: 4%; height: 25px;">
+                            <option value="red" style="color: #c01212;; background-color: #c01212;" title="Red">🟥</option>
+                            <option value="green" style="color: green; background-color: green;" title="Green">🟩</option>
+                            <option value="blue" style="color: blue; background-color: blue;" title="Blue">🟦</option>
+                            <option value="orange" style="color: orange; background-color: orange;" title="Orange">🟧</option>
+                            <option value="yellow" style="color: yellow; background-color: yellow;" title="Yellow">🟨</option>
+                        </select>
+                        <label for="colorTaskCompleted" style="margin-left: 20px;">Color <b>Tasks completed:</b></label>
+                        <select name="selectColor" id="colorTaskCompleted" style="width: 4%; height: 25px;">
+                            <option value="red" style="color: #c01212;; background-color: #c01212;" title="Red">🟥</option>
+                            <option value="green" style="color: green; background-color: green;" title="Green">🟩</option>
+                            <option value="blue" style="color: blue; background-color: blue;" title="Blue">🟦</option>
+                            <option value="orange" style="color: orange; background-color: orange;" title="Orange">🟧</option>
+                            <option value="yellow" style="color: yellow; background-color: yellow;" title="Yellow">🟨</option>
                         </select>
                     </div>
                 </center>
-                <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false" id="tipImage"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">"Tasks Completed" </i> or <i style="font-weight: 800;">"Tasks Created"</i> to see the progress of an individual item.</h3>
+                <h3 class="tip" style="font-weight: 300;"><img src="assets/_tip.png" height="20px" width="20px" draggable="false" id="tipImage"><p style="display: inline; color: orange;"><b style="font-weight: 800;">TIP:</b>  </p> Click on <i style="font-weight: 800;">"Tasks Completed" </i> or <i style="font-weight: 800;">"Tasks Created"</i> &nbsp;to see the progress of an individual item.</h3>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_settings.png" draggable="false" height="35px" width="35px"> Settings:</h1>
                 <div class="settings" id="settings">
