feat: adding new feautures
* fixed some mismatchs with english language
* added a new indicator for the new version

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container" id="app">
             <div class="column">
-                <h1 style="font-family: 'Excon', sans-serif;"><img src="assets/_maintenanceIcon.png" alt="Icon" style="width: 20px; height: 20px;" draggable="false"> MAINTENANCE TASKS</h1>
+                <h1 style="font-family: 'Excon', sans-serif;"><img src="assets/_maintenanceIcon.png" alt="Icon" style="width: 20px; height: 20px;" draggable="false" title="Maintenance Task"> MAINTENANCE TASKS</h1>
                 <div class="input-group">
                     <input type="text" id="softwareInput" placeholder="Enter Task name..." required spellcheck="false" title="Task name" maxlength="20">
                     <div class="version-inputs" id="software">
@@ -52,7 +52,7 @@
         <div class="info" id="infoBox">
             <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_info.png" draggable="false" height="35px" width="35px"> About:</h1>
             <div class="content" style="margin-top: -35px;">
-                <h2 id="version">Version:</h2>
+                <h2 id="version">Version: </h2>
                 <p style="margin-top: -20px;" id="latestversion">Latest version avaible: </p>
                 <h2 id="build">Build:</h2>
                 <hr>
