fix: fixed tooltip
* fixed missing tooltip for "Out of Maintenance" icon

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                 <ul id="softwareList"></ul>
             </div>
             <div class="column">
-                <h1 style="font-family: 'Excon', sans-serif;"><img src="assets/_outMaintenanceIcon.png" alt="Icon" style="width: 20px; height: 20px;" draggable="false"> OUT OF MAINTENANCE</h1>
+                <h1 style="font-family: 'Excon', sans-serif;"><img src="assets/_outMaintenanceIcon.png" alt="Icon" style="width: 20px; height: 20px;" draggable="false" title="Out of Maintenance"> OUT OF MAINTENANCE</h1>
                 <div class="input-group">
                     <input type="text" id="fuoriInput" placeholder="Enter Task name... " required spellcheck="false" title="Task name" maxlength="20">
                     <div class="version-inputs" id="out">
