--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=excon@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=manrope@1&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container" id="app">
