fix: fixed github text
* fixed github tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                     <br>
                     <h2 style="text-align: center; font-family: 'Excon', sans-serif;"><img src="assets/_references.png" draggable="false" height="20px" width="20px"> Web References:</h2>
                     <div class="references">
-                        <button id="repoGitBtn" title="Open Repository"><img src="assets/_github.png" width="20px" height="20px" draggable="false"> Open GitHub Repository</button>
+                        <button id="repoGitBtn" title="Open Repository"><img src="assets/_github.png" width="20px" height="20px" draggable="false"> Open on GitHub</button>
                         <button id="licenseBtn" title="See License"><img src="assets/_license.png" width="20px" height="20px" draggable="false"> See License</button>
                     </div>
                     <h4 style="color: white; display: flex; justify-content: end; margin-right: 170px; margin-top: -0px; font-weight: 300; font-style: italic;">Apache License</h4>
