fix: fixing texts
* fixed text of BuildNumber in Info

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <div class="content" style="margin-top: -35px;">
                 <h2 id="version">Version: </h2>
                 <p style="margin-top: -20px;" id="latestversion">Latest version avaible: </p>
-                <h2 id="build">Build:</h2>
+                <h2 id="build">Build Number:</h2>
                 <hr>
                 <h1 style="font-size: 50px; font-family: 'Excon', sans-serif;"><img src="assets/_chart.png" draggable="false" width="35px" height="35px"> Charts:</h1>
                 <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Tasks created:  <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCreated"></p></h2>
