fix: fixed draggable texts

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
             </div>
         </div>
         <div id="sidebarAI" class="sidebar-ai">
-            <a href="javascript:void(0)" id="closeSidebarBtn" class="close-sidebar-btn" title="Close AI">&times;</a>
+            <a href="javascript:void(0)" id="closeSidebarBtn" class="close-sidebar-btn" title="Close AI" draggable="false">&times;</a>
             <div class="sidebar-ai-content">
                 <h2 style="margin-top: -35px; font-family: 'Excon', sans-serif;" class="assistantText">AI Assistant <img src="assets/_betaIcon.png" height="40px" width="40px" style="margin-top: 10px;" draggable="false"></h2>
                 <div id="aiChatHistory" class="ai-chat-history"></div>
